# devops-infra-check

./: .pre-commit-config.yaml  Dockerfile  README.md  launch-debug.sh  launch.sh  pyproject.toml
.devops/: docker-build.yml
app/: main.py
